crates/rome_js_formatter/tests/specs/prettier/typescript/definite/definite.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: definite.ts

---
# Input
```js
class MyComponent {
ngModel!: ng.INgModelController;
}

const x!: string

var y!: MyComponent

```

# Output
```js
class MyComponent {
  ngModel!: ng.INgModelController;
}

const x!: string;

var y!: MyComponent;

```

# Errors
```
error[SyntaxError]: Const var declarations must have an initialized value
  ┌─ definite.ts:5:7
  │
5 │ const x!: string
  │       ^ this variable needs to be initialized


```


